bunch of refactoring, finished rails 5 upgrade!

--- a/config/locales/nl.models.yml
+++ b/config/locales/nl.models.yml
@@ -4,7 +4,9 @@ nl:
 
   activerecord:
     models:
-      user: Gebruiker
+      user:
+        one: Gebruiker
+        other: Gebruikers
 
     attributes:
       user:
