--- a/config/locales/en.models.yml
+++ b/config/locales/en.models.yml
@@ -4,7 +4,9 @@ en:
 
   activerecord:
     models:
-      user: User
+      user:
+        one: User
+        other: Users
 
     attributes:
       user:
