--- a/config/locales/en.models.yml
+++ b/config/locales/en.models.yml
@@ -10,7 +10,7 @@ en:
 
     attributes:
       user:
-        name: &name
+        name: *name
         email: Email address
         password: Password
         password_confirmation: Repeat password
